# geocoder_rs

./: Cargo.toml  Gemfile  README.md  Rakefile  build.rs  geocoder.gemspec  geocoder_rs.gemspec
benches/: benchmark.rs
lib/: geocoder_rs.rb
src/: lib.rs  util.rs
test/: test_geocoder.rb
