[package]
name = "geocoder_rs"
version = "1.0.0"
authors = ["Josh Leverette"]

[dependencies]
geo = { version = "0.9.1", features = ["use-serde"] }
geojson = "0.11.0"
lazy_static = "1.0.1"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"
rayon = "1.0.1"
ruru = "0.9.3"

[dev-dependencies]
criterion = "0.2.3"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
geo = { version = "0.9.1", features = ["use-serde"] }
geojson = "0.11.0"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"
rayon = "1.0.1"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
